# c-20

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json  main.cpp  run.sh
docs/: 01.入口.md  02.属性收集.md  03.多用户写作.md  04.最小示范代码.md
include/: SafeQueue.hpp  common.h  packaged_task.hpp
include/01Exmale/: 01.example.h  02.accumulat.h
include/03DataShared/: datashard.h
include/04Sync/: sync.h
include/05.commit/: collector.h  commitServer.h  document.h  history.h  model.h
src/: common.cpp  main.cpp
src/01Exmale/: 01.example.cpp  02.accumulat.cpp
src/03DataShared/: datashard.cpp
src/04Sync/: futrue.cpp  sync.cpp
